Fix import statements